--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   #State management
-  get: ^4.1.4
+  get: ^4.6.3
   flutter_bloc: ^8.0.1
 
   #Utilities
   package_info: ^2.0.0
   permission_handler: ^8.3.0
+  intl: ^0.17.0
   intl_utils: ^2.1.0
   equatable: ^2.0.3
 
@@ -53,14 +54,15 @@ dependencies:
   shimmer: ^2.0.0
 
   #Dialog, etc
-  cached_network_image: ^3.0.0
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  retrofit_generator:
+  retrofit_generator: ^4.0.1
   json_serializable:
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
