--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vn.newwave.flutter_app">
    <application
-        android:label="flutter_app"
+        android:label="Newwave Solution JSC"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
