--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ dev_dependencies:
   retrofit_generator: ^4.0.1
   json_serializable:
   flutter_lints: ^2.0.1
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/images/launcher_icon.png"
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
