--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,7 +36,7 @@ dependencies:
 
   #Utilities
   package_info: ^2.0.0
-  permission_handler: ^8.3.0
+  permission_handler: ^9.2.0
   intl: ^0.17.0
   intl_utils: ^2.1.0
   equatable: ^2.0.3
@@ -66,6 +66,8 @@ dev_dependencies:
   json_serializable:
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.2
+  coverage: ^1.3.2
+  mocktail: ^0.3.0
 
 flutter_icons:
   android: "ic_launcher"
