--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dev_dependencies:
   coverage: ^1.3.2
   mocktail: ^0.3.0
 
+  # unit test
+  mockito: ^5.3.2
+
 flutter_icons:
   android: "ic_launcher"
   ios: true
