--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,50 +23,52 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
+
+  # localization
+  flutter_localization: ^0.1.10
+
   #State management
-  get: ^4.6.3
-  flutter_bloc: ^8.0.1
-  hydrated_bloc: ^8.1.0
+  get: ^4.6.5
+  flutter_bloc: ^8.1.0
+  hydrated_bloc: ^9.1.0
 
   #Utilities
-  package_info: ^2.0.0
-  permission_handler: ^9.2.0
+  package_info_plus: ^3.1.0
+  permission_handler: ^10.2.0
   intl: ^0.17.0
-  intl_utils: ^2.1.0
-  equatable: ^2.0.3
+  intl_utils: ^2.8.2
+  equatable: ^2.0.5
 
   #Store
-  flutter_secure_storage: ^5.0.2
-  shared_preferences: ^2.0.5
-  path_provider: ^2.0.10
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.1.0
+  path_provider: ^2.0.14
 
   #Network
-  retrofit: ^3.0.1
-  dio: ^4.0.0
-  json_annotation: ^4.0.0
+  retrofit: ^4.0.1
+  dio: ^5.1.1
+  json_annotation: ^4.8.0
 
   #Custom UI
   flutter_datetime_picker: ^1.5.1
   shimmer: ^2.0.0
 
   #Dialog, etc
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  retrofit_generator: ^4.0.1
-  json_serializable:
+  retrofit_generator: ^6.0.0+2
+  json_serializable: ^6.6.1
   flutter_lints: ^2.0.1
-  flutter_launcher_icons: ^0.9.2
-  coverage: ^1.3.2
+  flutter_launcher_icons: ^0.13.1
+  coverage: ^1.6.3
   mocktail: ^0.3.0
 
 flutter_icons:
