--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -29,9 +29,10 @@ jobs:
         channel: 'stable'
       
     - name: Code quality
-    - run: flutter clean
-    - run: flutter pub get
-    - run: flutter pub run intl_utils:generate
-    - run: flutter pub run build_runner build --delete-conflicting-outputs
-    - run: flutter format ./lib --set-exit-if-changed
-    - run: flutter analyze
+    - run: |
+       flutter clean
+       flutter pub get
+       flutter pub run intl_utils:generate
+       flutter pub run build_runner build --delete-conflicting-outputs
+       flutter format ./lib --set-exit-if-changed
+       flutter analyze
