--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,17 +61,20 @@ dependencies:
 
   #Dialog, etc
   cached_network_image: ^3.2.3
+  connectivity_plus: ^3.0.4
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
+  build_runner: ^2.3.3
   retrofit_generator: ^6.0.0+2
   json_serializable: ^6.6.1
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   coverage: ^1.6.3
   mocktail: ^0.3.0
+  freezed: ^2.3.2
 
 flutter_icons:
   android: "ic_launcher"
