--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   intl_utils: ^2.8.2
   equatable: ^2.0.5
+  url_launcher: ^6.1.10
 
   #Store
   flutter_secure_storage: ^8.0.0
