--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -32,5 +32,5 @@ jobs:
     - run: flutter pub get
     - run: flutter pub run intl_utils:generate
     - run: flutter pub run build_runner build --delete-conflicting-outputs
-    - run: flutter format ./lib --set-exit-if-changed
+    - run: dart format ./lib --set-exit-if-changed
     - run: flutter analyze
