--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   dio: ^5.1.1
   json_annotation: ^4.8.0
 
+  #load svg:
+  flutter_svg: ^2.0.4
+
+
   #Custom UI
   shimmer: ^2.0.0
 
@@ -105,6 +109,7 @@ flutter:
     - assets/images/ic_eye_close.png
     - assets/images/ic_eye_open.png
     - assets/images/ic_eye_open.png
+    - assets/svg/
 
   fonts:
     - family: Arimo
