--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   #Dialog, etc
   cached_network_image: ^3.2.3
 
+  #Firebase
+  firebase_core: ^2.13.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
