--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   #Dialog, etc
   cached_network_image: ^3.2.3
 
+  #firebase
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
