--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,17 +64,19 @@ dependencies:
 
   #Database
   isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
+  build_runner: ^2.4.5
   retrofit_generator: ^6.0.0+2
   json_serializable: ^6.6.1
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   coverage: ^1.6.3
   mocktail: ^0.3.0
+  isar_generator: ^3.1.0+1
 
 flutter_icons:
   android: "ic_launcher"
