--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl_utils: ^2.8.2
   equatable: ^2.0.5
   url_launcher: ^6.1.10
+  go_router: ^8.0.3
 
   #Store
   flutter_secure_storage: ^8.0.0
@@ -61,6 +62,14 @@ dependencies:
 
   #Dialog, etc
   cached_network_image: ^3.2.3
+
+  #splash
+  flutter_native_splash: ^2.2.19
+flutter_native_splash:
+  image: assets/images/ic_logo_transparent.png
+  color: "#ffffff"
+  android_disable_fullscreen: true
+
 
 dev_dependencies:
   flutter_test:
@@ -96,6 +105,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/images/ic_logo_transparent.png
     - assets/images/bg_image_placeholder.png
     - assets/images/ic_logo.png
     - assets/images/ic_logo_transparent.png
