--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_gen:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +46,9 @@ dependencies:
   intl_utils: ^2.8.2
   equatable: ^2.0.5
   url_launcher: ^6.1.10
+  flutter_svg: ^2.0.6
+  image_picker: ^0.8.9
+  photo_view: ^0.14.0
 
   #Store
   flutter_secure_storage: ^8.0.0
