--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   shimmer: ^2.0.0
   another_flushbar: ^1.12.30
 
+  #Logger
+  logger: ^1.4.0
+  pretty_dio_logger: ^1.3.1
+
   #Dialog, etc
   cached_network_image: ^3.2.3
 
