--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,15 @@ dependencies:
   cupertino_icons: ^1.0.4
 
   # localization
-  flutter_localization: ^0.1.10
+  flutter_localization: ^0.2.0
 
   #State management
   flutter_bloc: ^8.1.0
   hydrated_bloc: ^9.1.0
 
   #Utilities
-  package_info_plus: ^3.1.0
-  permission_handler: ^10.2.0
+  package_info_plus: ^5.0.1
+  permission_handler: ^11.3.0
   intl: ^0.18.0
   intl_utils: ^2.8.2
   equatable: ^2.0.5
@@ -47,7 +47,7 @@ dependencies:
   photo_view: ^0.14.0
 
   #Store
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.1.0
   path_provider: ^2.0.14
 
@@ -57,15 +57,15 @@ dependencies:
   json_annotation: ^4.8.0
 
   #Router
-  go_router: ^9.0.0
+  go_router: ^13.2.0
 
   #UI
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   another_flushbar: ^1.12.30
   flutter_svg: ^2.0.7
 
   #Logger
-  logger: ^1.4.0
+  logger: ^2.0.2+1
   pretty_dio_logger: ^1.3.1
 
   #Dialog, etc
@@ -75,12 +75,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner:
-  retrofit_generator: ^6.0.0+2
+  retrofit_generator: ^8.1.0
   json_serializable: ^6.6.1
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
   flutter_launcher_icons: ^0.13.1
   coverage: ^1.6.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.3
 
 flutter_icons:
   android: "ic_launcher"
