--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,23 +114,29 @@ flutter:
     - assets/images/ic_eye_close.png
     - assets/images/ic_eye_open.png
     - assets/images/ic_eye_open.png
+    - assets/images/ic_splash_logo.png
+    - assets/images/ic_logo.png
 
   fonts:
-    - family: Arimo
+    - family: Poppins
       fonts:
-        - asset: assets/fonts/Arimo-Regular.ttf
+        - asset: assets/fonts/Poppins-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Poppins-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Poppins-Light.ttf
           weight: 300
-        - asset: assets/fonts/Arimo-Regular.ttf
+        - asset: assets/fonts/Poppins-Regular.ttf
           weight: 400
-        - asset: assets/fonts/Arimo-Medium.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
           weight: 500
-        - asset: assets/fonts/Arimo-SemiBold.ttf
+        - asset: assets/fonts/Poppins-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/Arimo-Bold.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
-        - asset: assets/fonts/Arimo-Bold.ttf
+        - asset: assets/fonts/Poppins-ExtraBold.ttf
           weight: 800
-        - asset: assets/fonts/Arimo-Bold.ttf
+        - asset: assets/fonts/Poppins-Black.ttf
           weight: 900
 
   # An image asset can refer to one or more resolution-specific "variants", see
