--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   equatable: ^2.0.5
   url_launcher: ^6.1.10
   photo_view: ^0.14.0
+  device_info_plus: ^9.1.2
 
   #Store
   flutter_secure_storage: ^9.0.0
