feat: separate requestStoragePermission from requestPhotoPermission

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,7 @@
     <string></string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string></string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string></string>
 </dict>
 </plist>
