--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.1.10
   photo_view: ^0.14.0
   device_info_plus: ^9.1.2
+  package_info_plus: ^5.0.1
 
   #Store
   flutter_secure_storage: ^9.0.0
