feat: add change password screen and term & policy webview (#53)
Co-authored-by: TuanDQ <tuandq@newwave.com>
Co-authored-by: thosonit <thoson.it@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   #UI
   shimmer: ^3.0.0
   flutter_svg: ^2.0.7
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
