--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   photo_view: ^0.14.0
   device_info_plus: ^9.1.2
   package_info_plus: ^5.0.1
+  image_picker: ^1.0.7
+  flutter_image_compress: ^2.1.0
 
   #Store
   flutter_secure_storage: ^9.0.0
